<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stock Register</string>

    <string name="title_stock">Stock</string>
    <string name="title_items">Items</string>
    <string name="title_add_items">Add Items</string>
    <string name="title_party">Party</string>
    <string name="title_parties">Parties</string>
    <string name="title_setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="text_all_transactions">All Transactions</string>
    <string name="tool_text_4">4</string>
    <string name="text_total_stock_out">Total Stock Out</string>
    <string name="tool_text_2">2</string>
    <string name="text_total_stock_in">Total Stock In</string>
    <string name="text_card_view_stock_transaction_summary">Stock Transaction Summary</string>
    <string name="text_daily">Daily</string>
    <string name="dummy_date_text">07/07/2021</string>
    <string name="content_description_image">image</string>
    <string name="text_store_b">Store B</string>
    <string name="text_store_a">Store A</string>
    <string name="text_change">Change</string>
    <string name="btn_text_add_store">Add Store</string>
    <string name="text_heading_all_stores">All Stores</string>
    <string name="btn_text_add_party">Add Party</string>
    <string name="text_heading_all_parties">All Parties</string>
    <string name="text_currency_usd">Currency - USD $</string>
    <string name="text_all_items">All items</string>
    <string name="btn_text_add_item">Add item</string>
    <string name="text_store_name">Store name</string>
    <string name="text_hint_enter_store_name_here">Enter store name here</string>
    <string name="btn_text_save">Save</string>
    <string name="text_customer_name">Customer name</string>
    <string name="text_hint_enter_customer_name_here">Enter customer name here</string>
    <string name="text_mobile_number">Mobile number</string>
    <string name="dummy_number_91">+91</string>
    <string name="text_hint_enter_mobile_number_here">Enter mobile number here</string>
    <string name="text_or">Or</string>
    <string name="text_add_from_contacts">Add from Contacts</string>
    <string name="text_item_name">Item name</string>
    <string name="text_hint_enter_here">Enter here</string>
    <string name="text_purchase_price">Purchase Price</string>
    <string name="text_mrp">MRP</string>
    <string name="text_selling_price">Selling Price</string>
    <string name="text_price_unit">Price Unit</string>
    <string name="text_select_unit">Select Unit</string>
    <string name="text_opening_stock">Opening Stock</string>
    <string name="text_hint_enter_quantity_here">Enter quantity here</string>
    <string name="text_select_store">Select store</string>
    <string name="text_hint_add">Add</string>
    <string name="text_as_of_date">As of date</string>
    <string name="add_stock_from_another_store">Add Stock from another store</string>
    <string name="select_type_stock_in_self">Select type</string>
    <string name="toolbar_stock_in_self">Stock In</string>
    <string name="customer">Customer</string>
    <string name="self">Self</string>
    <string name="select_store">Select store</string>
    <string name="add_store_name">Add store name</string>
    <string name="enter_quantity_to_add">Enter quantity to add</string>
    <string name="enter_quantity_to_reduce">Enter quantity to reduce</string>
    <string name="select_customer">Select Customer</string>
    <string name="enter_customer_name_here">Enter customer name here</string>
    <string name="total_amount">Total amount</string>
    <string name="toolbar_stock_out">toolbar_stock_out</string>
    <string name="stock_out">Stock Out</string>
    <string name="sale_price">Sale price</string>
    <string name="welcome">Welcome!</string>
    <string name="you_will_receive_an_otp_on_this_number">You will receive an OTP on this number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="please_enter_your_valid_mobile_number_to_create_your_bhandar_account">Please enter your valid mobile number to create your Bhandar account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="code">Code</string>
    <string name="account_login">Account Login</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="please_enter_the_6_digit_otp_you_received">Please enter the 6-digit OTP you received</string>
    <string name="otp">OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="send_new_otp">Send new OTP</string>
    <string name="verify">Verify</string>
    <string name="add_stock">Add Stock</string>
    <string name="reduce_stock">Reduce Stock</string>
    <string name="message_no_party_added_yet">No Party Added Yet!</string>
    <string name="message_no_store_added_yet">No Store Added Yet!</string>
    <string name="error_message_denied_request">Oops! you just denied the permission needed. You can also allow it from settings.</string>
    <string name="please_enter_party_name_mssg">Please enter party name.</string>
    <string name="mssg_enter_valid_mobile_number">Please enter valid mobile number.</string>
    <string name="error_mssg_enter_store_name">Please enter store name.</string>
    <string name="available_stock">Available Stock</string>
    <string name="select_unit">Select Unit</string>
</resources>