<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AddStoreAndPartyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_store_and_party_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryTextColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_text_add_party"
            android:gravity="start|center"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_add_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_store_and_party_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_store_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_enter_store_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border_background"
            android:hint="@string/text_hint_enter_store_name_here"
            android:textColorHint="@color/SecondaryTextColor"
            android:inputType="text"
            android:autofillHints="@string/text_hint_enter_store_name_here"
            android:padding="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_add_party"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_store_and_party_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_customer_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_enter_customer_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border_background"
            android:hint="@string/text_hint_enter_customer_name_here"
            android:textColor="@color/black"
            android:textColorHint="@color/SecondaryTextColor"
            android:inputType="text"
            android:autofillHints="@string/text_hint_enter_customer_name_here"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mobile_number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/dummy_number_91"
                android:background="@drawable/edit_text_border_background"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />


            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border_background"
                android:hint="@string/text_hint_enter_mobile_number_here"
                android:textColor="@color/black"
                android:textColorHint="@color/SecondaryTextColor"
                android:inputType="phone"
                android:autofillHints="@string/text_hint_enter_mobile_number_here"
                android:padding="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_or"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/btn_add_from_contacts"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/text_add_from_contacts"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/primary_text_color_background"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_text_save"
        android:textAllCaps="false"
        android:layout_marginBottom="25dp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>